--- a/Day6/M1-D6.html
+++ b/Day6/M1-D6.html
@@ -150,14 +150,33 @@
   </table>
 
   
-  <div id="googleMap" style="width:100%;height:300px; margin-top: 20px;">
+  <div id="googleMap" style="width:100%;height:420px; margin-top: 20px;">
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12037.296300049342!2d5.565680036581373!3d50.63585057635196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c0fa0b816699d7%3A0x76a9dddbdf15cc40!2sMontagne%20de%20Bueren!5e0!3m2!1sde!2sde!4v1601905804111!5m2!1sde!2sde" width="300" height="300" frameborder="1" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"><br></iframe>
   </iframe>
 </div>
   
+<h2>Contact us</h2>
+
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value=""><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value=""><br><br>
+  <label for="email">Email:</label><br>
+  <input type="text" id="email" name="email" value=""><br><br>
+  <input type="submit" value="Submit" onclick="clicked(event)">
+</form> 
+
   <script>
 
-    
+type="submit">
+    function clicked() {
+       if (confirm('Do you want to submit?')) {
+           yourformelement.submit();
+       } else {
+           return false;
+       }
+    }
     
       document.body.style.backgroundColor = "EDB6A3";
 
