--- a/Day9/Bingo.html
+++ b/Day9/Bingo.html
@@ -18,9 +18,9 @@
     <title>Bingo bongo lol</title>
   </head>
   <body>
-    <div id="tabella"></div>
-    <h3 class="extracted-number animated zoomIn"></h3>
-    <h3 style="text-align: center" class="estrai-numero">Extract Number</h3>
+    <div id="table"></div>
+    <h3 class="extracted-number"></h3>
+    <h3 style="text-align: center" class="random-number">Extract Number</h3>
     <h3 class="reset">Reset</h3>
     <h3 style="grid-row: 2; margin-top: 35px" class="reset autorun">
       Automate
