--- a/Day10/M1-D10-QUIZ.html
+++ b/Day10/M1-D10-QUIZ.html
@@ -40,7 +40,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="styles.css" rel="stylesheet" />
     <script defer src="script.js"></script>
-    <title>Quiz App</title>
+    <title>Quiz</title>
   </head>
   <body>
     <h1>
